@@ -5,15 +5,17 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4UserEventAction.cc,v 1.1 1999-01-07 16:06:40 gunter Exp $
+// $Id: G4UserEventAction.cc,v 1.2 1999-04-09 03:04:03 asaim Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 
 #include "G4UserEventAction.hh"
+#include "G4Event.hh"
+#include "G4EventManager.hh"
 
-void G4UserEventAction::BeginOfEventAction()
+void G4UserEventAction::BeginOfEventAction(const G4Event* anEvent)
 {;}
 
-void G4UserEventAction::EndOfEventAction()
+void G4UserEventAction::EndOfEventAction(const G4Event* anEvent)
 {;}
 
